--- a/app/pages/masculino/masculino.html
+++ b/app/pages/masculino/masculino.html
@@ -14,7 +14,7 @@
   <header style="background-color: #f6f6f3;" id="user-info">
     <div class="primeira navbar navbar-expand-lg">
         <div class="ms-sm-2 collapse navbar-collapse">
-            <a class="navbar-brand" href="../../index.html">
+            <a class="navbar-brand" href="../../../index.html">
                 <svg width="45" height="27" viewBox="0 0 45 27" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="45" height="26.3208" fill="url(#pattern0)" />
                 <defs>
@@ -29,7 +29,7 @@
 
         <div class="justify-content-start">
             <button class="navbar-logo d-lg-none d-xl-none" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-              <a href="../../index.html">
+              <a href="../../../index.html">
                 <span class="logo-escondida">
                     <svg width="20" height="25" viewBox="0 0 40 62" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="40" height="11" fill="black" />
@@ -42,19 +42,6 @@
           </div>
 
           <div class="justify-content-end">
-            <button class="navbar-carrinho d-lg-none d-xl-none" type="button" data-toggle="modal" data-target="#myModal" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-                <span class="carrinho">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1.25em" viewBox="0 0 576 512">
-                        <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                        <style>
-                          svg {
-                            fill: #000000
-                          }
-                        </style>
-                        <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
-                    </svg>
-                </span>
-            </button>
             <button class="navbar-toggler navbar-bars d-lg-none d-xl-none" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
                 <span class="bars">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#000000}</style><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
@@ -81,7 +68,7 @@
     <div class="segunda navbar navbar-expand-lg">
         <div class="tamanho-logo ms-sm-2 collapse navbar-collapse">
           <span class="EeO1gono72zCwsLm8rKyo7qBMSywLRPVryFAHcAy3XKGhSvQYMGbe">
-            <a class="logo" target="_self" href="../../index.html">
+            <a class="logo" target="_self" href="../../../index.html">
               <svg width="40" height="62" viewBox="0 0 40 62" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="40" height="11" fill="black" />
                 <rect y="25" width="40" height="11" fill="black" />
@@ -125,17 +112,6 @@
                   }
                 </style>
                 <path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
-              </svg>
-            </button>
-            <button class="Favoritos_compras" type="button" id="outro-icon" data-toggle="modal" data-target="#myModal">
-              <svg class="icones" xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 576 512">
-              <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                <style>
-                svg {
-                  fill: #000000
-                }
-                </style>
-                <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
               </svg>
             </button>
           </div>
