--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
       <div class="catalogo-escolha ms-sm-2 collapse navbar-collapse">
         <nav role="menubar" class="catalogo">
           <li role="menuitem" class="menu">
-            <a aria-label="Lançamentos" class="secao" href="../app/pages/lancamentos/lancamentos.html">Lançamentos</a>
+            <a aria-label="Lançamentos" class="secao" href="/app/pages/lancamentos/lancamentos.html">Lançamentos</a>
           </li>
           <li role="menuitem" class="menu">
-            <a aria-label="Masculino" class="secao" href="../app/pages/masculino/masculino.html">Masculino</a>
+            <a aria-label="Masculino" class="secao" href="/app/pages/masculino/masculino.html">Masculino</a>
           </li>
           <li role="menuitem" class="menu">
-            <a aria-label="Feminino" class="secao" href="../app/pages/feminino/feminino.html">Feminino</a>
+            <a aria-label="Feminino" class="secao" href="/app/pages/feminino/feminino.html">Feminino</a>
           </li>
         </nav>
       </div>
