--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
             <li class="nav-item">
                 <span id="logout-container" class="entrar"></span>
-                <a class="entrar" id="cadastro-link" href="../app/pages/cadastro/cadastro.html">Cadastro</a>
+                <a class="entrar" id="cadastro-link" href="/app/pages/cadastro/cadastro.html">Cadastro</a>
             </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
     <div class="segunda navbar navbar-expand-lg">
       <div class="tamanho-logo ms-sm-2 collapse navbar-collapse">
         <span class="EeO1gono72zCwsLm8rKyo7qBMSywLRPVryFAHcAy3XKGhSvQYMGbe">
-          <a class="logo" target="_self" href="../index.html">
+          <a class="logo" target="_self" href="/index.html">
             <svg width="40" height="62" viewBox="0 0 40 62" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="40" height="11" fill="black" />
               <rect y="25" width="40" height="11" fill="black" />
@@ -166,7 +166,7 @@
           <a class="produtos" aria-label="Air Jordan 4 Military Black" href="/app/pages/tenis/tenis.html?tenis=Air%20Jordan%204%20Military%20Black">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Air Jordan 4 Military Black.webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="/assets/img/Air Jordan 4 Military Black.webp">
               </span>
             </div>
             <div class="nome-preco">
