--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="justify-content-start">
             <button class="navbar-logo d-lg-none d-xl-none" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-              <a href="../index.html">
+              <a href="index.html">
                 <span class="logo-escondida">
                     <svg width="20" height="25" viewBox="0 0 40 62" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="40" height="11" fill="black" />
@@ -61,7 +61,7 @@
             </li>
             <li class="nav-item">
                 <span id="logout-container" class="entrar"></span>
-                <a class="entrar" id="cadastro-link" href="/app/pages/cadastro/cadastro.html">Cadastro</a>
+                <a class="entrar" id="cadastro-link" href="app/pages/cadastro/cadastro.html">Cadastro</a>
             </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
     <div class="segunda navbar navbar-expand-lg">
       <div class="tamanho-logo ms-sm-2 collapse navbar-collapse">
         <span class="EeO1gono72zCwsLm8rKyo7qBMSywLRPVryFAHcAy3XKGhSvQYMGbe">
-          <a class="logo" target="_self" href="/index.html">
+          <a class="logo" target="_self" href="index.html">
             <svg width="40" height="62" viewBox="0 0 40 62" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="40" height="11" fill="black" />
               <rect y="25" width="40" height="11" fill="black" />
@@ -82,13 +82,13 @@
       <div class="catalogo-escolha ms-sm-2 collapse navbar-collapse">
         <nav role="menubar" class="catalogo">
           <li role="menuitem" class="menu">
-            <a aria-label="Lançamentos" class="secao" href="/app/pages/lancamentos/lancamentos.html">Lançamentos</a>
+            <a aria-label="Lançamentos" class="secao" href="app/pages/lancamentos/lancamentos.html">Lançamentos</a>
           </li>
           <li role="menuitem" class="menu">
-            <a aria-label="Masculino" class="secao" href="/app/pages/masculino/masculino.html">Masculino</a>
+            <a aria-label="Masculino" class="secao" href="app/pages/masculino/masculino.html">Masculino</a>
           </li>
           <li role="menuitem" class="menu">
-            <a aria-label="Feminino" class="secao" href="/app/pages/feminino/feminino.html">Feminino</a>
+            <a aria-label="Feminino" class="secao" href="app/pages/feminino/feminino.html">Feminino</a>
           </li>
         </nav>
       </div>
