--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <a class="produtos" aria-label="Air Jordan 4 Military Black" href="/app/pages/tenis/tenis.html?tenis=Air%20Jordan%204%20Military%20Black">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="/assets/img/Air Jordan 4 Military Black.webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Air Jordan 4 Military Black.webp">
               </span>
             </div>
             <div class="nome-preco">
@@ -635,7 +635,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
-    <script src="../app/scripts/main.js"></script>
+    <script src="/app/scripts/main.js"></script>
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
@@ -771,6 +771,17 @@
       console.error('Elemento #loginForm não encontrado na página.');
     }
   }
+    </script>
+
+    <script>
+      function closeNav() {
+        document.querySelector(".sidebar").style.width = "0";
+      }
+
+      $(".navbar-toggler").click(function () {
+        $(".sidebar").css("width", $(".sidebar").width() === 0 ? "100%" : "0");
+      });
+
     </script>
     
     
