--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
   <div class="propaganda">
       <a href="app/pages/lancamentos/lancamentos.html">
-        <img src="../assets/img/Fare - CAPA.png" class="capa img-fluid" alt="responsive-img">
+        <img src="assets/img/Fare - CAPA.png" class="capa img-fluid" alt="responsive-img">
       </a>
   </div>
   <div class="novidades container-fluid">
@@ -189,7 +189,7 @@
           <a class="produtos" aria-label="Adidas Forum 84 Low ADV Cloud White" href="app/pages/tenis/tenis.html?tenis=Adidas%20Forum%2084%20Low%20ADV%20Cloud%20White">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Forum 84 Low ADV Cloud White (2).webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Forum 84 Low ADV Cloud White (2).webp">
               </span>
             </div>
             <div class="nome-preco">
@@ -212,7 +212,7 @@
           <a class="produtos" aria-label="Air Jordan 1 High Heritage" href="app/pages/tenis/tenis.html?tenis=Air%20Jordan%201%20High%20Heritage">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Air Jordan 1 - Heritage (1).webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Air Jordan 1 - Heritage (1).webp">
               </span>
             </div>
             <div class="nome-preco">
@@ -235,7 +235,7 @@
           <a class="produtos" aria-label="Puma Slipstream White Black" href="app/pages/tenis/tenis.html?tenis=Puma%20Slipstream%20White%20Black">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Puma Slipstream White Black.webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Puma Slipstream White Black.webp">
               </span>
             </div>
             <div class="nome-preco">
@@ -285,7 +285,7 @@
           <a class="produtos" aria-label="Air Jordan 4 Red Thunder" href="app/pages/tenis/tenis.html?tenis=Air%20Jordan%204%20Red%20Thunder">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Air Jordan 4 Red Thunder.webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Air Jordan 4 Red Thunder.webp">
               </span>
             </div>
             <div>
@@ -308,7 +308,7 @@
           <a class="produtos" aria-label="Jordan Tatum 1 Barbershop" href="app/pages/tenis/tenis.html?tenis=Jordan%20Tatum%201%20Barbershop">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Jordan Tatum 1 Barbershop.webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Jordan Tatum 1 Barbershop.webp">
               </span>
             </div>
             <div>
@@ -331,7 +331,7 @@
           <a class="produtos" aria-label="Jordan Luka 2 Nebula" href="app/pages/tenis/tenis.html?tenis=Jordan%20Luka%202%20Nebula">
             <div class="imagem-produto">
               <span>
-                <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Jordan Luka 2 Nebula.webp">
+                <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Jordan Luka 2 Nebula.webp">
               </span>
             </div>
             <div>
@@ -367,7 +367,7 @@
   
   <div class="propaganda">
     <a href="app/pages/lancamentos/lancamentos.html">
-      <img src="../assets/img/Basquete - Site.jpg" class="imagem-basquete img-fluid" alt="responsive-img">
+      <img src="assets/img/Basquete - Site.jpg" class="imagem-basquete img-fluid" alt="responsive-img">
     </a>
   </div>
   <div>
@@ -384,7 +384,7 @@
             <a class="produtos" aria-label="Air Jordan 1 Mid Alternate Bred Toe" href="app/pages/tenis/tenis.html?tenis=Air%20Jordan%201%20Mid%20Alternate%20Bred%20Toe">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/AJ1MABT.webp">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/AJ1MABT.webp">
                 </span>
               </div>
               <div class="nome-preco">
@@ -407,7 +407,7 @@
             <a class="produtos" aria-label="Adidas ADI2000 Triple Black" href="app/pages/tenis/tenis.html?tenis=Adidas%20ADI2000%20Triple%20Black">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/adidas ADI2000 Triple Black.webp">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/adidas ADI2000 Triple Black.webp">
                 </span>
               </div>
               <div class="nome-preco">
@@ -430,7 +430,7 @@
             <a class="produtos" aria-label="Nike Dunk Low Rose Whisper" href="app/pages/tenis/tenis.html?tenis=Nike%20Dunk%20Low%20Rose%20Whisper">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Nike Dunk Low Rose Whisper.webp">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Nike Dunk Low Rose Whisper.webp">
                 </span>
               </div>
               <div class="nome-preco">
@@ -453,7 +453,7 @@
             <a class="produtos" aria-label="Air Jordan 1 Low Sky J Purple" href="app/pages/tenis/tenis.html?tenis=Air%20Jordan%201%20Low%20Sky%20J%20Purple">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Air Jordan 1 Low.webp">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Air Jordan 1 Low.webp">
                 </span>
               </div>
               <div class="nome-preco">
@@ -480,7 +480,7 @@
             <a class="produtos" aria-label="Nike Dunk Low GS Active Fuchsia" href="app/pages/tenis/tenis.html?tenis=Nike%20Dunk%20Low%20GS%20Active%20Fuchsia">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Nike Dunk Low GS Active Fuchsia.webp">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Nike Dunk Low GS Active Fuchsia.webp">
                 </span>
               </div>
               <div>
@@ -503,7 +503,7 @@
             <a class="produtos" aria-label="New Balance 550 White Green" href="app/pages/tenis/tenis.html?tenis=New%20Balance%20550%20White%20Green">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/New Balance 550 White Green.jpg">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/New Balance 550 White Green.jpg">
                 </span>
               </div>
               <div>
@@ -526,7 +526,7 @@
             <a class="produtos" aria-label="Nike Zoom LeBron NXXT Gen White" href="app/pages/tenis/tenis.html?tenis=Nike%20Zoom%20LeBron%20NXXT%20Gen%20White">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/NZLGW.webp">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/NZLGW.webp">
                 </span>
               </div>
               <div>
@@ -549,7 +549,7 @@
             <a class="produtos" aria-label="Nike Dunk Low GS Black White Panda" href="app/pages/tenis/tenis.html?tenis=Nike%20Dunk%20Low%20GS%20Black%20White%20Panda">
               <div class="imagem-produto">
                 <span>
-                  <img class="imagem-tenis d-block" alt="Masculino" src="../assets/img/Nike Dunk Low GS Black White Panda.webp">
+                  <img class="imagem-tenis d-block" alt="Masculino" src="assets/img/Nike Dunk Low GS Black White Panda.webp">
                 </span>
               </div>
               <div>
@@ -635,7 +635,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
-    <script src="/app/scripts/main.js"></script>
+    <script src="app/scripts/main.js"></script>
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
