--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -463,7 +463,7 @@
           const botaoMinhaConta = document.querySelector('.botao-minha-conta');
   
           minhaContaLink.addEventListener('click', () => {
-            window.location.href = '/app/pages/perfil/perfil.html';
+            window.location.href = 'app/pages/perfil/perfil.html';
           });
   
           botaoMinhaConta.textContent = 'LOGOUT / SAIR';
@@ -499,7 +499,7 @@
   
       if (loggedIn) {
         if (iconId === 'search-icon' || iconId === 'outro-icon') {
-          window.location.href = '/app/pages/perfil/perfil.html';
+          window.location.href = 'app/pages/perfil/perfil.html';
         }
       } else {
       }
