--- a/app/pages/tenis/tenis.html
+++ b/app/pages/tenis/tenis.html
@@ -305,7 +305,7 @@
   
       if (loggedIn) {
         if (iconId === 'search-icon' || iconId === 'outro-icon') {
-          window.location.href = 'app/pages/perfil/perfil.html';
+          window.location.href = '../perfil/perfil.html';
         }
       } else {
       }
