--- a/app/pages/perfil/perfil.html
+++ b/app/pages/perfil/perfil.html
@@ -513,7 +513,7 @@
       
           if (loggedIn) {
             if (iconId === 'search-icon' || iconId === 'outro-icon') {
-              window.location.href = 'app/pages/perfil/perfil.html';
+              window.location.href = 'perfil.html';
             }
           } else {
           }
