--- a/app/pages/tenis/tenis.html
+++ b/app/pages/tenis/tenis.html
@@ -269,7 +269,7 @@
           const botaoMinhaConta = document.querySelector('.botao-minha-conta');
   
           minhaContaLink.addEventListener('click', () => {
-            window.location.href = 'app/pages/perfil/perfil.html';
+            window.location.href = '../perfil/perfil.html';
           });
   
           botaoMinhaConta.textContent = 'LOGOUT / SAIR';
