--- a/app/pages/perfil/perfil.html
+++ b/app/pages/perfil/perfil.html
@@ -132,11 +132,11 @@
     <div class="sidebar d-lg-none d-xl-none">
       <div class="navegacao">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a class="primeira-navegacao" href="/app/pages/lancamentos/lancamentos.html">LANÇAMENTOS</a>
+        <a class="primeira-navegacao" href="../lancamentos/lancamentos.html">LANÇAMENTOS</a>
         <p>____________________________</p>
-        <a href="/app/pages/masculino/masculino.html">MASCULINO</a>
+        <a href="../masculino/masculino.html">MASCULINO</a>
         <p>____________________________</p>
-        <a class="ultima-navegacao" href="/app/pages/feminino/feminino.html">FEMININO</a>
+        <a class="ultima-navegacao" href="../feminino/feminino.html">FEMININO</a>
         <p class="divisao">____________________________</p>
       </div>
       <div class="minha-conta">
