--- a/app/pages/feminino/feminino.html
+++ b/app/pages/feminino/feminino.html
@@ -201,7 +201,7 @@
         </div>
       </div>
 
-      <div class="container-fluid d-none d-lg-block">
+      <div class="container-fluid">
         <div class="filtros">
             <div class="svg-filtro">
                 <span>
